RESOLVED FIXED51717
REGRESSION (r72887): Mail crashes when doing searches in a message due to method name conflict
https://bugs.webkit.org/show_bug.cgi?id=51717
Summary REGRESSION (r72887): Mail crashes when doing searches in a message due to met...
mitz
Reported 2010-12-29 11:35:37 PST
Mail crashes when doing searches in a message due to method name conflict
Attachments
Rename -findString:options: to -_findString:options: in WebDocumentOptionsSearching (3.93 KB, patch)
2010-12-29 11:48 PST, mitz
adachan: review+
mitz
Comment 1 2010-12-29 11:40:47 PST
mitz
Comment 2 2010-12-29 11:48:50 PST
Created attachment 77635 [details] Rename -findString:options: to -_findString:options: in WebDocumentOptionsSearching
mitz
Comment 3 2010-12-29 12:02:48 PST
Note You need to log in before you can comment on or make changes to this bug.