<rdar://problem/8758191> REGRESSION (r72887): Mail crashes when doing searches in a message due to method name conflict https://bugs.webkit.org/show_bug.cgi?id=51717

Reviewed by Ada Chan.

Renamed -findString:options: to -_findString:options: in the WebDocumentOptionsSearching
protocol to avoid conflict with -[WebHTMLView(MailExtras) findString:options:] which Mail defines.

* WebView/WebDocumentInternal.h:
* WebView/WebHTMLView.mm:
(-[WebHTMLView searchFor:direction:caseSensitive:wrap:startInSelection:]):
(-[WebHTMLView _findString:options:]):
* WebView/WebView.mm:
(findString):



Canonical link: https://commits.webkit.org/65090@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74751 268f45cc-cd09-0410-ab3c-d52691b4dbfc